improved GameService test coverage and composition